--- a/session node/views/index.ejs
+++ b/session node/views/index.ejs
@@ -7,6 +7,7 @@
         <body>
         <form action="/upload" method="post">
         <textarea name="text" rows="20" cols="60"></textarea>
+        <textarea name="session" rows="1" cols="20"></textarea>
        <input type="submit" value="Submit text" />
         </form>
         </body>
