corrected the blue dot not appearing

--- a/views/client.ejs
+++ b/views/client.ejs
@@ -85,7 +85,7 @@
                     fillColor: '#10BBE6',
                     fillOpacity: 0.35,
                     map: map,
-                    center: new google.maps.LatLng(currentMarker.position.k, currentMarker.position.D),
+                    center: new google.maps.LatLng(currentMarker.position.A, currentMarker.position.F),
                     radius: 1
                 };
                 // Add the circle for this city to the map.
