no more alert when new value is added, instead log it to console, only for testing this should be totaly removed when launched

--- a/views/client.ejs
+++ b/views/client.ejs
@@ -37,7 +37,7 @@
                 console.log(multipleLocation);
                 for(var locationIndex=0;locationIndex<multipleLocation.length;locationIndex++){
 
-                    alert('new value '+multipleLocation[locationIndex])
+                    console.log('new value '+multipleLocation[locationIndex])
                     var position=multipleLocation[locationIndex].split(',')
                     if(!(isNaN(position[0])&&isNaN(position[1])))
                     {
